# src/facade/rest/UserController.ts
@@ -1,24 +1,38 @@
+import { UserService } from '@/domain/service/UserService';
 import { GetLogger, ILogger, Inject, Provider } from '@augejs/core';
 import { KoaContext, Prefix, RequestMapping, RequestParams } from '@augejs/koa';
-import { KoaAccessTokenMiddleware } from '@augejs/koa-access-token';
+import { AccessData, KoaAccessTokenMiddleware } from '@augejs/koa-access-token';
 import { UserEntity } from '../../domain/model/UserEntity';
-import { UserRepository } from '../../infrastructure/repository/UserRepository';
-// import { UserRepository } from '../repositories/UserRepository';
 
-@Prefix('/api/user/user')
+@Prefix('/api/v1/user/user')
 @Provider()
 export class UserController {
-  @Inject(UserRepository)
-  private userRepository!: UserRepository;
+  @Inject(UserService)
+  private userService!: UserService;
 
   @GetLogger()
   private logger!: ILogger;
 
   @KoaAccessTokenMiddleware()
   @RequestMapping.Get('')
-  async list(@RequestParams.Context() ctx: KoaContext): Promise<UserEntity[]> {
-    this.logger.info(ctx.header);
-    return await this.userRepository.findAllUsers();
+  async list(
+    @RequestParams.Context() ctx: KoaContext,
+    @RequestParams.Query('offset') @RequestParams((value: string) => parseInt(value)) offset: number,
+    @RequestParams.Query('size') @RequestParams((value: string) => parseInt(value)) size: number,
+  ): Promise<Record<string, unknown>> {
+    const accessData = ctx.accessData as AccessData;
+    const appNo = accessData.get<string>('appNo') ?? null;
+
+    const [list, count] = await this.userService.list({
+      offset,
+      size,
+      appNo,
+    });
+
+    return {
+      list,
+      count,
+    };
   }
 
   @KoaAccessTokenMiddleware()
